fix(styles): fixed variables for colors and icon visibility

--- a/src/styles/icon-tab-bar.scss
+++ b/src/styles/icon-tab-bar.scss
@@ -1071,8 +1071,6 @@ $fd-icon-tab-bar-semantic-values: (
           }
 
           .#{$block}__label {
-            color: map_get($set-params, 'color');
-
             &::before {
               @extend %semantic-icon-base;
 
